# OTUS_advanced_basics

./: .gitignore  Makefile  README.md  deco.py  log_analyzer.py  pyproject.toml  report.html  tests_log_analyzer.py
.github/workflows/: makefile.yml
